[package]
name = "hn_daily"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde   = { version = "1.0", features = ["derive"] }
chrono  = "0.4"
anyhow  = "1"
dirs    = "5.0"
which   = "6.0"
html2text = "0.12"
url = "2.5"
readability = "0.2"
scraper = "0.16"
log = "0.4"